# ontobricks

./: .cursorrules  .databricksignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  INFO.md  LICENSE 11.36.52  Makefile  NOTICE.txt  README.md  app.yaml  build_docs.sh  conftest.py  cookies.txt  databricks.yml  deploy.sh  documentation.html  features.md  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.sh  setup.sh  start.sh  stop.sh  test_UI.sh
.cursor/: 01-expertise-and-principles.mdc  02-project-overview.mdc  03-system-components-and-requirements.mdc  04-project-structure.mdc  05-code-style-and-structure.mdc  06-performance-optimization.mdc  07-project-conventions.mdc  08-testing-and-deployment.mdc  09-package-management.mdc  10-entity-panel-matrix.mdc  11-frontend-design.mdc
.github/: CODEOWNERS
beta/: data_cluster_detection_593a82ad.plan.md  falkordb_backend_integration_31448325.plan.md
dab/: README.md
dev-app/: .databricksignore  app.yaml
docs/: INFO.md  README.md  api.md  architecture.md  code_organization.md  cohort_discovery.md  dab-reference.md  data-access.md  deployment.md  development.md  examples.md  features.md  get-started.md  graphdb-integration.md  import-export.md  integration-modes.md  mcp.md  product.md  user-guide.md
licenses/: README.md
releases/: ReleaseNotes_V0.1.2.md  ReleaseNotes_V0.2.0.md  Roadmap_2026-05.md
scripts/: bootstrap-app-permissions.sh  bootstrap-lakebase-perms.sh  build_docs.sh  deploy.config.sh  deploy.sh  run_tests.sh  start.sh  stop.sh  test_UI.sh
(+1247 files in other folders)
