[project]
name = "ontobricks"
version = "0.1.1"
description = "Ontology Management Tool for Databricks"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "starlette>=0.35.0",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "databricks-sql-connector>=3.0.0",
    "databricks-sdk>=0.20.0",
    "pyarrow>=14.0.0",
    "rdflib>=7.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "strawberry-graphql[fastapi]>=0.312.3",
    "mlflow>=3.11.1",
    "real_ladybug>=0.1.0",
    "apscheduler>=3.10,<4",
    "owlrl>=7.0.0",
    "pyshacl>=0.26.0",
    "networkx>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=26.3.1",
    "flake8>=6.0.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
    "playwright>=1.40.0",
    "sphinx>=7.0.0",
    "myst-parser>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/back", "src/front", "src/shared", "src/agents", "src/api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
